tests/valid/replace/replace_affine_drop_old.facet
fn f(mut x: affine isize) -> unrestricted () {
    let old: affine isize = (replace x 42);
    (drop old)
}
